# cleanup-compdb

./: Cargo.toml  readme.md
src/: cleanup.rs  lib.rs  main.rs
